--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </body>
 
-<script src="coord.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/JET-NMEMC/Gaussian-projection@main/coord.js"></script>
 
 <script language="javascript">
 
