--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 
 </body>
 
-<script src="https://cdn.jsdelivr.net/gh/JET-NMEMC/Gaussian-projection@main/coord.js"></script>
+<script src="src/coord.js"></script>
+//<script src="https://cdn.jsdelivr.net/gh/JET-NMEMC/Gaussian-projection@main/coord.js"></script>
 
 <script language="javascript">
 
