--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         } 
     </style>
 </head>
-<!-- <body> -->
-<body background="res/bank.jpg" style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;">
+<body>
+<!-- <body background="res/bank.jpg" style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;"> -->
 <!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
 <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
 <a href="index2.html">高斯投影坐标转换</a>
