--- a/index2.html
+++ b/index2.html
@@ -146,7 +146,7 @@
         console.log(typeof shuju[0][0],shuju);
         // console.log(DegreeConvertBack(shuju[0][0]));
 
-        if(text1.search(/″/)!=-1){
+        if(text1.search(/′/)!=-1){
             console.log("度分秒格式");
             for (var i = 0; i < shuju.length; i++) { //含有″的转为度
 
