--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website of JET</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="index/css/index.css">
     <style>
         *{  
             margin: 0px;  
@@ -37,7 +37,8 @@
 <!-- <body background="res/bank.jpg" style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;"> -->
 <!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
 <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
-<a href="index2.html">高斯投影坐标转换</a>
-<a href="index2.html" style="top: 30%;">度分秒转换</a>
+<a href="Gaussian projection coordinate conversion.html">高斯投影正反算坐标转换</a>
+<a href="auto contours.html" style="top: 25%;">自动等值轴刻度颜色图例</a>
+<a href="auto contours.html" style="top: 40%;">等值线图在线渲染展示系统</a>
 </body>
 </html>
