--- a/auto contours.html
+++ b/auto contours.html
@@ -10,6 +10,7 @@
     <script src="auto contours/abcl.js"></script>
     <style>
         i {
+            /* position: relative; */
             width: 30px;
             height: 24px;
             float: left;
@@ -23,9 +24,8 @@
     <h2>自动等差刻度等值线(auto level/contour/breaks)</h2>
     <p><a href="index.html">返回主页</a></p>
     <div style="border-style:solid; border-width:1px; border-color:#000;padding: 10px;">
-        <p>输入:一个最小值(value MIN)、最大值(value
-            MAX)，以及你想要的分段数量(TargetNm)。输出:最合适的等差序列，为了使用方便美观，以1,2,3,5及他们与10的整数次幂(含负整数)的乘积为步长,依次判断并选出与计划分段数量(TargetNm)最为符合和接近的步长，据此形成等差序列。大多数情况下，最终生成的分段个数会在你想得到的个数上下波动，但一定是最适宜的。
-        </p>
+        输入:一个最小值(value
+        MIN)、最大值(valueMAX)，以及你想要的分段数量(TargetNm)。输出:最合适的等差序列，为了使用方便美观，以1,2,3,5及他们与10的整数次幂(含负整数)的乘积为步长,依次判断并选出与计划分段数量(TargetNm)最为符合和接近的步长，据此形成等差序列。大多数情况下，最终生成的分段个数会在你想得到的个数上下波动，但一定是最适宜的。
         <p>
             Input: a minimum value (value MIN), maximum value (value MAX), and the number of segments you want
             (TargetNm). Output: The most suitable arithmetic sequence. For ease of use and beauty, take 1,
@@ -46,32 +46,39 @@
                 style="height: 30px;width: 100px;font-size: 18px; background-color: cyan;">generate</button>
         </p>
         生成的等差刻度(arithmetic breaks):
-        <p id="text"></p>
+        <p>
+        <div id="text" style="height: 20px;"></div>
+        </p>
+
     </div>
+
     <h2>自动颜色图例等值面填充(auto colorlegend contour map fill)</h2>
+<div style="border-style:solid; border-width:1px; border-color:#000;padding: 10px;">
     <p>
-        选择预设颜色方案 (choose a default color pattern):<select id="colorpattern"
+        选择预设颜色方案 (choose a default color pattern):
+        <select id="colorpattern"
             style="height: 30px;width: 100px;font-size: 18px; background-color: cyan;">
             <option value="bgyr" selected="selected">bgyr</option>
             <option value="jet">jet</option>
             <option value="cool">cool</option>
         </select>
     </p>
-    <p>基于autobreaks通过线性插值得到的颜色 (Color sequence obtained according to linear interpolation based on autobreaks):</p>
+
     <p>
-        <div style="border-style:solid; border-width:1px; border-color:#000;padding: 10px;">
-            <p>
-            <div style="height: 10px;">
-                <div id="interp color"></div>
-            </div>
-            </p>
-        </div>
+        基于autobreaks通过线性插值得到的颜色 (Color sequence obtained according to linear interpolation based on autobreaks):
     </p>
-    通过线性插值得到的十六进制颜色列表 (Hexadecimal color list obtained according to linear interpolation):
-    <p id="list"></p>
-    <p>颜色列表的线性填充结果 (Linear filling based on the final color list):
-    <div id="corlrbox" style="height:40px; width: 80%;"></div>
+    <div id="interp color" style="height: 20px;"></div>
+    <br>
+
+    <p>
+        通过线性插值得到的十六进制颜色列表 (Hexadecimal color list obtained according to linear interpolation):
     </p>
+    <div id="list" style=" word-wrap: break-word; word-break: normal;">
+    </div>
+
+    <p>颜色列表的线性填充结果 (Linear filling based on the final color list):</p>
+    <div id="corlrbox" style="height:40px; width: 95%;"></div>
+</div>
 </body>
 
 <script>
