--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
 <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
 <a href="Gaussian projection coordinate conversion.html">高斯投影正反算坐标转换</a>
 <a href="auto contours.html" style="top: 25%;">自动等值轴刻度颜色图例</a>
-<a href="auto contours.html" style="top: 40%;">等值线图在线渲染展示系统</a>
+<a href="webgis contour map.html" style="top: 40%;">等值线图在线渲染展示系统</a>
 </body>
 </html>
