--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -50,8 +50,8 @@
     <!-- <div>
         <input type="button" id="act1" value="WELCOME" onclick="msg('你好，欢迎使用！')" />
     </div> -->
-    <img src="contourmap/设置2.png" width="30px" onclick="showsetting('showsetting')"
-        style="position: fixed; left:10px; bottom:10px ;">
+    <img src="contourmap/设置2.png" width="50px" onclick="showsetting('showsetting')"
+        style="position: fixed; left:10px; bottom:10px;">
     <div id="showsetting" style="display: none;">
         <button onclick="showsetting('showsetting')" style="position: absolute; top: 1px; right: 1px;">X</button>
         <p>Mapping Setting</p>
@@ -64,15 +64,20 @@
             <option value="cool">cool</option>
         </select>
     </div>
-    <img src="contourmap/工程绘图.png" width="35px" onclick="showsetting('showtools')"
-        style="position: fixed; left:10px; bottom:50px;">
+    <img src="contourmap/工程绘图.png" width="55px" onclick="showsetting('showtools')"
+        style="position: fixed; left:10px; bottom:80px;">
     <div id="showtools" style="display: none;">
-        <div style="float:left;">
-            <textarea id="" cols="50" rows="30"></textarea>
+        <p><button onclick="showsetting('showtools')" style="position: absolute; top: 1px; right: 1px;">X</button></p>
+        <p>NewlayerName: <input type="text" id="NewlayerName" value="Newlayer"></p>
+        <div>
+            <div style="float:left;">
+                <textarea id="textarea" cols="50" rows="30" style="resize: none;">ZJ01QSX335 121.4581 28.6888&#10;ZJ01QSX336 121.5875 28.6744&#10;ZJ01QSX319 121.5883 28.6331
+                </textarea>
+            </div>
+            <div style="float:right;"><button onclick="drawsite()" style="height: 30px;">点集合</button></div>
+            <div><button onclick="drawpolygon()" style="height: 30px;">多边形</button></div>
+            <div><button style="height: 30px;">多段线</button></div>
         </div>
-        <div style="float:right;"><button>点集合</button></div>
-        <div><button>多边形</button></div>
-        <div><button>多段线</button></div>
     </div>
 
     <div id="ShowDiv" name="ShowDiv"></div>
@@ -307,6 +312,29 @@
                 msg("数据载入完成");
             }
             reader.readAsBinaryString(f);
+        }
+        function drawsite() {
+            var siteData = coord2shuzu('textarea');
+            var sitename = $("#NewlayerName").val();
+            console.log(siteData);
+            var sites = L.layerGroup();
+            for (var i = 0; i < siteData.length; i++) {
+                var markerlayer = L.marker([siteData[i][2], siteData[i][1]]).bindPopup(siteData[i][0]).addTo(sites)
+            };
+            sites.addTo(map);
+            layerControl.addOverlay(sites, sitename);
+            map.setView([siteData[0][2], siteData[0][1]]);
+        }
+        function drawpolygon() {
+            var siteData = coord2shuzu('textarea');
+            var sitename = $("#NewlayerName").val();
+            console.log(siteData);
+            var latlngs = [];
+            for (var i = 0; i < siteData.length; i++) { latlngs.push([siteData[i][2], siteData[i][1]]) };
+            var polygon = L.polygon(latlngs, { color: 'green', weight: 1, fillOpacity: 0.2 }).addTo(map);
+            polygon.bindPopup(sitename);
+            layerControl.addOverlay(polygon, sitename);
+            map.fitBounds(polygon.getBounds());
         }
         //---------------------------------------------------------------------生成左侧选项卡
         function draw_menu() {
