--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -6,6 +6,7 @@
     <title>webgis</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.css" />
     <link rel="stylesheet" href="contourmap/leaflet-velocity.css" />
     <link rel="stylesheet" href="contourmap/demo.css" />
 
@@ -13,6 +14,8 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.min.js"></script>
+    <script src="contourmap/LabelTextCollision.js"></script>
     <script src="contourmap/leaflet-velocity.js"></script>
     <style>
         .info {
@@ -51,7 +54,7 @@
         <input type="button" id="act1" value="WELCOME" onclick="msg('你好，欢迎使用！')" />
     </div> -->
     <img src="contourmap/设置2.png" width="50px" onclick="showsetting('showsetting')"
-        style="position: fixed; left:10px; bottom:10px;">
+        style="position: fixed; left:80px; bottom:10px;">
     <div id="showsetting" style="display: none;">
         <button onclick="showsetting('showsetting')" style="position: absolute; top: 1px; right: 1px;">X</button>
         <p>Mapping Setting</p>
@@ -65,9 +68,10 @@
         </select>
     </div>
     <img src="contourmap/工程绘图.png" width="55px" onclick="showsetting('showtools')"
-        style="position: fixed; left:10px; bottom:80px;">
+        style="position: fixed; left:150px; bottom:10px;">
     <div id="showtools" style="display: none;">
         <p><button onclick="showsetting('showtools')" style="position: absolute; top: 1px; right: 1px;">X</button></p>
+        <!-- <p><input type="checkbox" checked onclick="setCollisionDetection(this.checked)"> Collision detection</p> -->
         <p>NewlayerName: <input type="text" id="NewlayerName" value="Newlayer"></p>
         <div>
             <div style="float:left;">
@@ -111,11 +115,6 @@
         var legend;
         var countourmap;
 
-        function showsetting(idname) {
-            var obj = document.getElementById(idname);
-            if (obj.style.display == "none") { obj.style.display = "block" }
-            else { obj.style.display = "none" }
-        };
         //----------------------------------------------------------------------------------单击事件，开始新项目
         $("#select").change(function () {
             var newxiangmu = $("#select").val();
@@ -155,7 +154,7 @@
                 //生成canvas插值多边形，leaf调换x,y
                 var lnglats_clip = [];
                 for (var i = 0; i < res.length; i++) { lnglats_clip.push([res[i].x, res[i].y]) };
-                area_clip[0] = lnglats_clip; //不能加var
+                area_clip[0] = lnglats_clip; //全局变量,不能加var
                 // console.log("area_clip=:", area_clip);
 
                 xrange[0] = Math.min.apply(null, lngs); xrange[1] = Math.max.apply(null, lngs);
@@ -252,13 +251,11 @@
             //RGB颜色转换为16进制，存入colors
             var colors = [];
             for (var i = 0; i < interpcolor[0].length; i++) { colors.push(colorRGB2Hex(interpcolor[0][i], interpcolor[1][i], interpcolor[2][i])) };
-
-            // console.log("映射颜色序列", colors);
-            colors.shift();
             console.log("映射颜色序列", colors);
+            colors.shift();
+            // console.log("映射颜色序列", colors);
             //将得到的格网grid，按颜色带渲染至canvas上
             mycanvas.width = 1000; mycanvas.height = 1000;
-
             var colorcanvas = kriging.plot(mycanvas, grid, [xrange[0], xrange[1]], [yrange[0], yrange[1]], colors, breaks);
             var Img = mycanvas.toDataURL("image/png");//将canvas转换成image的URL
             var imageBounds = [[yrange[0], xrange[0]], [yrange[1], xrange[1]]];
@@ -313,18 +310,25 @@
             }
             reader.readAsBinaryString(f);
         }
+
+        //-------------------------------------------------绘制散点图
         function drawsite() {
             var siteData = coord2shuzu('textarea');
             var sitename = $("#NewlayerName").val();
             console.log(siteData);
             var sites = L.layerGroup();
+            // var layers = L.featureGroup().addTo(map);
             for (var i = 0; i < siteData.length; i++) {
-                var markerlayer = L.marker([siteData[i][2], siteData[i][1]]).bindPopup(siteData[i][0]).addTo(sites)
+                // var markerlayer = L.marker([siteData[i][2], siteData[i][1]],{text:siteData[i][0].toString()}).bindPopup(siteData[i][0]).addTo(sites)
+                var c=L.circleMarker([siteData[i][2], siteData[i][1]], {radius : 5}).bindPopup(siteData[i][0]).addTo(sites);
+                // layers.addLayer(c);
+                // ;
             };
             sites.addTo(map);
             layerControl.addOverlay(sites, sitename);
             map.setView([siteData[0][2], siteData[0][1]]);
-        }
+        };
+       //-------------------------------------------------绘制多边形
         function drawpolygon() {
             var siteData = coord2shuzu('textarea');
             var sitename = $("#NewlayerName").val();
@@ -335,7 +339,8 @@
             polygon.bindPopup(sitename);
             layerControl.addOverlay(polygon, sitename);
             map.fitBounds(polygon.getBounds());
-        }
+        };
+
         //---------------------------------------------------------------------生成左侧选项卡
         function draw_menu() {
             // var $selected = $("#select");
@@ -346,9 +351,17 @@
             }
             $("#select").append(obj) //option字符串写入select标签中
             $("#select").show();
-        }
+        };
 
-        function getkey(json) { //提取json中的所有属性名称，进入数组
+        //显示设置窗口
+        function showsetting(idname) {
+            var obj = document.getElementById(idname);
+            if (obj.style.display == "none") { obj.style.display = "block" }
+            else { obj.style.display = "none" }
+        };
+
+        //提取json中的所有属性名称，进入数组
+        function getkey(json) { 
             var s = [];
             for (var keys in json[0]) {
                 s.push(keys);
