--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -1,26 +1,15 @@
-<!-- https://github.com/danwild/leaflet-velocity -->
 <!doctype html>
 <html>
 <script>
     //设备检测
-    function getsize(){
+    function getmachine(){
         var machine;
-        var awidth;
         if (/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
             machine="mobile";
-            // awidth='50px';
-            return {awidth:'50px'}
         }else{
             machine="computer";
-            // awidth='30px';
-            return {awidth:'30px'}
         };
     };
-    // console.log(getsize());
-    awidth=getsize().awidth;
-    console.log(awidth);
-    // getsize();
-    // alert(machine);
 </script>
 
 <head>
@@ -28,7 +17,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="contourmap/leaflet-geoman.css" />
-    <link rel="stylesheet" href="contourmap/leaflet-velocity.css" />
+    <!-- <link rel="stylesheet" href="contourmap/leaflet-velocity.css" /> -->
     <link rel="stylesheet" href="contourmap/leaflet-measure.css">
     <link rel="stylesheet" href="contourmap/demo.css" />
 
@@ -38,7 +27,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="contourmap/leaflet-geoman.min.js"></script>
     <!-- <script src="contourmap/LabelTextCollision.js"></script> -->
-    <script src="contourmap/leaflet-velocity.js"></script>
+    <!-- <script src="contourmap/leaflet-velocity.js"></script> -->
     <style>
         .info {
             padding: 5px 8px;
@@ -79,10 +68,10 @@
     <!-- <div>
         <input type="button" id="act1" value="WELCOME" onclick="msg('你好，欢迎使用！')" />
     </div> -->
-    <img src="contourmap/icon2/设置2.png" width="50px" onclick="showsetting('showsetting')"
-        style="position: fixed; left:80px; bottom:10px;">
+    <img src="contourmap/icon2/设置2.png" width="50px" onclick="showHide('showsetting')"
+        style="position: fixed; left:90px; bottom:10px;">
     <div id="showsetting" style="display: none;">
-        <button onclick="showsetting('showsetting')" style="position: absolute; top: 1px; right: 1px;">X</button>
+        <button onclick="showHide('showsetting')" style="position: absolute; top: 1px; right: 1px;">X</button>
         <p>Mapping Setting</p>
         <p>
             <input type="file" value="" onchange="impexcel(this)"
@@ -97,16 +86,16 @@
             <option value="cool">cool</option>
         </select>
     </div>
-    <img src="contourmap/icon2/工程绘图.png" width="55px" onclick="showsetting('showtools')"
-        style="position: fixed; left:140px; bottom:10px;">
+    <img src="contourmap/icon2/绘制3.png" width="50px" onclick="showHide('showtools')"
+        style="position: fixed; left:150px; bottom:10px;">
     <div id="showtools" style="display: none;">
-        <p><button onclick="showsetting('showtools')" style="position: absolute; top: 1px; right: 1px;">X</button></p>
+        <p><button onclick="showHide('showtools')" style="position: absolute; top: 1px; right: 1px;">X</button></p>
         <!-- <p><input type="checkbox" checked onclick="setCollisionDetection(this.checked)"> Collision detection</p> -->
-        <p>NewlayerName: <input type="text" id="NewlayerName" value="Newlayer"></p>
+        <p>图层名: <input type="text" id="NewlayerName" value="New" width="70px"></p>
+        <p>边线色：<input type="color" id="edgecolor" value="#2D9900"> 填充色：<input type="color" id="fillcolor" value="#2124c7"></p>
         <div>
             <div style="float:left;">
-                <textarea id="textarea" cols="50" rows="30" style="resize: none;">A335 121.4581 30.6888&#10;A336 121.5875 30.6744&#10;A319 121.5883 30.6331
-                </textarea>
+                <textarea id="textarea" cols="40" rows="20" style="resize: none;">A335 121.4581 30.6888&#10;A336 121.5875 30.6744&#10;A319 121.5883 30.6331</textarea>
             </div>
             <div style="float:right;"><button onclick="drawsite()" style="height: 30px;">点集合</button></div>
             <div><button onclick="drawpolygon()" style="height: 30px;">多边形</button></div>
@@ -121,7 +110,10 @@
     <script src="contourmap/leaflet.latlng-graticule.js"></script>
     <script src="contourmap/kriging.js"></script>
     <script src="contourmap/leaflet-measure.js"></script>
-    <!-- <script src="contourmap/leaflet.ChineseTmsProviders.js"></script> -->
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <script src="contourmap/demo.js"></script>
     <script>
             //---------------------------------------------------------------------------------------------------------------主程序
@@ -341,7 +333,7 @@
             //-------------------------------------------------绘制散点图
             function drawsite() {
                 var siteData = coord2shuzu('textarea');
-                var sitename = $("#NewlayerName").val();
+                var sitename = $("#NewlayerName").val()+"-点";
                 console.log(siteData);
                 let icon = L.icon({
                     iconUrl: 'contourmap/icon/位置2(4).png',//marker图片地址
@@ -355,7 +347,6 @@
                 for (var i = 0; i < siteData.length; i++) {
                     L.marker([siteData[i][2], siteData[i][1]], { icon: icon, data: "dt" }).bindPopup(siteData[i][0]).addTo(sites);
                     // L.circleMarker([siteData[i][2], siteData[i][1]], {radius : 5}).bindPopup(siteData[i][0]).addTo(sites);
-                    // layers.addLayer(c);
                     let markerIcon = L.divIcon({
                         html: siteData[i][0],//marker标注
                         className: 'my-div-icon',
@@ -366,14 +357,15 @@
                 sites.addTo(map);
                 sitesLabel.addTo(map);
                 layerControl.addOverlay(sites, sitename);
-                layerControl.addOverlay(sitesLabel, sitename + "-Label");
-                map.setView([siteData[0][2], siteData[0][1]]);
+                layerControl.addOverlay(sitesLabel, sitename + "-标注");
+                // map.fitBounds([[siteData[0][2], siteData[0][1]],[siteData[siteData.length][2], siteData[siteData.length][1]]]);
+                map.setView([siteData[0][2], siteData[0][1]],10);
             };
 
             //-------------------------------------------------绘制多边形
             function drawpolygon() {
                 var siteData = coord2shuzu('textarea');
-                var sitename = $("#NewlayerName").val();
+                var sitename = $("#NewlayerName").val()+"-面";
                 console.log(siteData);
                 var latlngs = [];
                 for (var i = 0; i < siteData.length; i++) { latlngs.push([siteData[i][2], siteData[i][1]]) };
@@ -386,11 +378,11 @@
             };
             function drawpolyline() {
                 var siteData = coord2shuzu('textarea');
-                var sitename = $("#NewlayerName").val();
+                var sitename = $("#NewlayerName").val()+"-线";
                 console.log(siteData);
                 var latlngs = [];
                 for (var i = 0; i < siteData.length; i++) { latlngs.push([siteData[i][2], siteData[i][1]]) };
-                var polyline = L.polyline(latlngs, { color: 'blue', weight: 1, fillOpacity: 0.2 }).addTo(map);
+                var polyline = L.polyline(latlngs, { color: 'blue', weight: 1.5}).addTo(map);
                 polyline.bindPopup(sitename);
                 layerControl.addOverlay(polyline, sitename);
                 map.fitBounds(polyline.getBounds());
@@ -409,7 +401,7 @@
             };
 
             //显示设置窗口
-            function showsetting(idname) {
+            function showHide(idname) {
                 var obj = document.getElementById(idname);
                 if (obj.style.display == "none") { obj.style.display = "block" }
                 else { obj.style.display = "none" }
