Update webgis contour map.html

--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -26,6 +26,10 @@
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="contourmap/leaflet-geoman.min.js"></script>
+    <script src="contourmap/leaflet.latlng-graticule.js"></script>
+    <script src="contourmap/kriging.js"></script>
+    <script src="contourmap/leaflet-measure.js"></script>
+    <script src="contourmap/L.KML.js"></script>
     <!-- <script src="contourmap/LabelTextCollision.js"></script> -->
     <!-- <script src="contourmap/leaflet-velocity.js"></script> -->
     <style>
@@ -85,6 +89,10 @@
             <option value="jet">jet</option>
             <option value="cool">cool</option>
         </select>
+        <p>kml Setting</p>
+        <input type="file" id="file" value="" onchange="addkml('file')" />
+        <!-- <input id="File1" type="file" />
+        <input id="btAdd" type="button" value="Add" onclick="alert(document.getElementById('File1').value);" /> -->
     </div>
     <img src="contourmap/icon2/绘制3.png" width="50px" onclick="showHide('showtools')"
         style="position: fixed; left:150px; bottom:10px;">
@@ -107,12 +115,10 @@
         <select id="select" style="display: none;">
         </select>
     </div>
-    <script src="contourmap/leaflet.latlng-graticule.js"></script>
-    <script src="contourmap/kriging.js"></script>
-    <script src="contourmap/leaflet-measure.js"></script>
+
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
     <script src="contourmap/demo.js"></script>
     <script>
@@ -133,6 +139,23 @@
             var figurectrol = {};
             var legend;
             var countourmap;
+            function addkml(id){
+                var filepath=getPath(document.getElementById(id)); //input:file的id
+                console.log(filepath);
+                fetch("contourmap/example2.kml")
+                .then(res => res.text())
+                .then(kmltext => {
+                    // Create new kml overlay
+                    const parser = new DOMParser();
+                    const kml = parser.parseFromString(kmltext, 'text/xml');
+                    const track = new L.KML(kml);
+                    map.addLayer(track);
+
+                    // Adjust map to show the kml
+                    const bounds = track.getBounds();
+                    map.fitBounds(bounds);
+                });
+            }
 
             //----------------------------------------------------------------------------------单击事件，开始新项目
             $("#select").change(function () {
